# overengineered-todolist

./: .dockerignore  .env.example  .gitignore  DOMAIN_MODEL.md  Dockerfile  README.md  coverage.txt  docker-compose.yaml  domain-model.mmd  notadealunos.py  pyproject.toml  test.py  teste2.py
.github/workflows/: build-docker-image.yaml  code-lint.yaml  docker-publish.yml
app/: alembic.ini  main.py
app/alembic/: env.py
app/alembic/versions/: 2693906b62e5_create_todo_tables.py  5a1b2c3d4e5f_add_task_fields_to_todo_items.py  cfba94646eec_create_users_table.py
app/modules/auth/application/: use_cases.py
app/modules/auth/domain/: authentication_service.py  entities.py  exceptions.py  ports.py  services.py  value_objects.py
app/modules/auth/infrastructure/: bcrypt_hasher.py  jwt_provider.py  orm_models.py  repositories.py
app/modules/auth/interface/: router.py  schemas.py  users_router.py
app/modules/todo/application/: use_cases.py
app/modules/todo/domain/: entities.py  (+3 more)
app/shared/: config.py  database.py  dependencies.py  exceptions.py  token_blocklist.py
app/tests/: conftest.py  test_database.py  test_health.py  test_main.py
bruno/: opencollection.yml
bruno/auth/: login.yml  register.yml
bruno/environments/: local.yml
bruno/tasks/: create.yml  delete.yml  get.yml  list.yml  update.yml
bruno/users/: create.yml  delete.yml  get.yml  update.yml
docs/: arquitetura.md  glossario.md  index.md  orm.md
docs/modulos/: auth.md  todo.md
htmlcov/: class_index.html  function_index.html  index.html  status.json
tests/todo/unit/: test_todo_use_cases.py
(+13 files in other folders)
