[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myapp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "pyjwt",
    "bcrypt",
    "pydantic[email]",
    "pydantic-settings",
    "python-dotenv",
]

[tool.pytest.ini_options]
testpaths = ["app/tests"] 
pythonpath = ["app"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "black",
]

